@@ -1,7 +1,8 @@
 2004-03-26  Vince Darley  <vincentdarley@users.sourceforge.net>
 
         * generic/tclPathObj.c:   Fix to Windows-only volume relative
-        * tests/fileSystem.test:  path normalization. [Bug 923586]
+        * tests/fileSystem.test:  path normalization. [Bug 923586].
+        Also fixed another volume relative bug found while testing.
 
 2004-03-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
